<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/background_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/signup_background"
            app:layout_constraintBottom_toTopOf="@+id/background_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/rl_signup_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/titleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:text="@string/sign_up_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="54dp"
                android:background="@drawable/blue_underline_background"
                android:paddingHorizontal="0dp"
                app:boxBackgroundMode="none"
                app:endIconMode="none"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/labelTextStyle"
                app:hintTextColor="@color/white_50">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_label"
                    android:inputType="textEmailAddress"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.nexlesoft.ket.ui.custom.passwordstrengthmeter.PasswordStrengthMeter
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chk_age_confirm"
                style="@style/checkboxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="36dp"
                android:buttonTint="@color/purple"
                android:checked="false"
                android:paddingStart="12dp"
                android:text="@string/age_confirmation_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:text="@string/sign_up_terms_and_privacy_policy_label"
                android:textAlignment="textStart"
                android:textColor="@color/white_50" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:id="@+id/rl_signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/titleMediumTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/sign_up_label" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@drawable/next_button_drawable" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_right_ios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>